--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,7 @@ include 'netty-demo'
 include 'netty-1-01'
 include 'netty-1-02'
 include 'netty-1-03'
+include 'netty-1-04'
+include 'netty-1-05'
+include 'netty-1-06'
 
